crates/formatter/tests/snapshots/snapshots__anki__storage__revlog__add.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert or ignore into revlog (
	id,
	cid,
	usn,
	ease,
	ivl,
	lastIvl,
	factor,
	time,
	type
)
values
	(
		(
			case
				when ?1 and ?2 in (select id from revlog)
					then (select max(id) + 1 from revlog)
				else ?2
			end
		),
		?,
		?,
		?,
		?,
		?,
		?,
		?,
		?
	)
