crates/formatter/tests/snapshots/snapshots__anki__storage__revlog__get.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select
	id,
	cid,
	usn,
	ease,
	cast (ivl as integer),
	cast (lastIvl as integer),
	factor,
	time,
	type
from revlog
