crates/formatter/tests/snapshots/snapshots__anki__storage__revlog__studied_today.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select count(), coalesce(sum(time) / 1000.0, 0.0)
from revlog
where id > ? and type != ? and type != ?;
