crates/formatter/tests/snapshots/snapshots__anki__storage__revlog__studied_today_by_deck.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select
	case when c.odid == 0 then c.did else c.odid end as original_did,
	count(distinct r.cid) as cnt
from revlog as r join cards as c on r.cid = c.id
where r.id > ? and r.ease > 0 and (r.type < 3 or r.factor != 0)
group by original_did
