crates/formatter/tests/snapshots/snapshots__anki__storage__revlog__time_of_last_review.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select id / 1000
from revlog
where cid = $1 and ease between 1 and 4 and (type != 3 or factor != 0)
order by id desc
limit 1;
