crates/formatter/tests/snapshots/snapshots__anki__storage__revlog__v2_upgrade.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update revlog set ease = ease + 1 where ease in (2, 3) and type in (0, 2);
